added about section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,56 @@
                 <p class="section-description">
                     I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
                 </p>
+                <div class="about-info-container">
+                    <div class="about-info">
+                        <h4 class="info-title">Name:</h4>
+                        <p class="info-description">Mary Hardy</p>
+                    </div>
+                    <div class="about-info">
+                        <h4 class="info-title">Email:</h4>
+                        <p class="info-description">maryhardy@gmail.com</p>
+                    </div>
+                    <div class="about-info">
+                        <h4 class="info-title">Date of birth:</h4>
+                        <p class="info-description">11 june 1992</p>
+                    </div>
+                    <div class="about-info">
+                        <h4 class="info-title">From:</h4>
+                        <p class="info-description">Los Angeles, USA</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+          
+        <!-- section "What I do" -->
+        <section>
+            <h3 class="section-title">What I Do</h3>
+                <p id="what-i-do-description" class="section-description">
+                    I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+                </p>
+                <div class="skills-container">
+                    <div class="skills">
+                        <img src="images/icons/js.png" alt="">
+                        <h3 class="skills-title">Vanilla JavaScript</h3>
+                        <p class="skills-descriiption">
+                            JavaScript is a versatile programming language primarily used for web development. It enables dynamic interactions, validates input, and enhances user experience through responsive elements. With its broad range of applications, JavaScript is integral to creating interactive websites and web applications.</p>
+                    </div>
+                    <div class="skills">
+                        <img src="images/icons/react.png" alt="">
+                        <h3 class="skills-title">React</h3>
+                        <p class="skills-descriiption">React is a JavaScript library for building user interfaces. It enables developers to create reusable UI components, manage state efficiently, and update the user interface efficiently using a virtual DOM. It is widely used for building interactive and dynamic web applications.</p>
+                    </div>
+                    <div class="skills">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <h3 class="skills-title">Node.js</h3>
+                        <p class="skills-descriiption">Node.js is an open-source, server-side JavaScript runtime environment that allows you to run JavaScript code outside of a web browser. It provides a scalable and event-driven architecture, making it popular for building fast and efficient web applications and network servers.</p>
+                    </div>
+                    <div class="skills">
+                        <img src="images/icons/mongo.png" alt="">
+                        <h3 class="skills-title">MongoDB</h3>
+                        <p class="skills-descriiption">MongoDB is a popular NoSQL database that provides a flexible and scalable solution for storing and retrieving data. It allows for document-oriented storage, high performance, and horizontal scalability, making it ideal for modern applications and big data environments.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
