--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/f521e85bd7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -24,13 +25,14 @@
         <h3 class="banner-greeting">Hi, I  am</h3>
         <h1 class="banner-title">Mary Hardy</h1>
         <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-        <button class="btn-primary">Download CV</button>
-        <button class="btn-primary">Contact</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+        <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
         <img class="profile-photo" src="images/hardy.png" alt="">
       </div>
     </header>
     <main>
+        <!-- About me section -->
         <section class="about">
             <div class="section-title">
                 <h3>About Me</h3>
@@ -145,7 +147,7 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
@@ -154,13 +156,20 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
         <h3 class="section-title">Lets Connect</h3>
         <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
         <div class="social-links">
-            <a href=""><img src="images/icons/facebook.png" alt=""></a>
-            <a href=""><img src="images/icons/insta.png" alt=""></a>
-            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/icons/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/?hl=en" target="_blank"><img src="images/icons/insta.png" alt=""></a>
+            <a href="https://twitter.com/home" target="_blank"><img src="images/icons/twitter.png" alt=""></a>
         </div>
     </div>
     <div class="footer-column">
-        <h3 class="section-title">Let’s Message me</h3>
+        <h3 id="f-title" class="section-title">Let’s Message me</h3>
+        <form class="contact" action="">
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your email">
+            <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+            <input class="btn-primary" id="submit" type="submit" value="Submit">
+
+        </form>
     </div>
     </footer>
 </body>
