--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
     <script src="https://kit.fontawesome.com/f521e85bd7.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="images/icons/fav-icon.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -168,7 +169,6 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
             <input type="email" placeholder="Your email">
             <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
             <input class="btn-primary" id="submit" type="submit" value="Submit">
-
         </form>
     </div>
     </footer>
